--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -52,9 +52,13 @@
           <div id="child-{{ cat_key }}" class="collapse" data-category="{{ parent.category }}" {% if expand_category == parent.category %}data-auto-expand="true"{% endif %}>
             <div class="mb-2 mx-2">
               <select class="form-select subcategory-dropdown" data-category="{{ parent.category }}">
-                {% for subcat in sub_map[parent.category].subcategories %}
-                <option value="{{ subcat }}">{{ subcat }}</option>
-                {% endfor %}
+                {% if parent.category in sub_map and sub_map[parent.category].subcategories %}
+                  {% for subcat in sub_map[parent.category].subcategories.keys() %}
+                  <option value="{{ subcat }}">{{ subcat }}</option>
+                  {% endfor %}
+                {% else %}
+                  <option value="">No subcategories available</option>
+                {% endif %}
               </select>
             </div>
             <div id="loading-{{ cat_key }}" class="text-center my-2" style="display: none;">
@@ -248,7 +252,7 @@ function refreshTable() {
           if (toggle) toggle.textContent = '-';
           const category = element.getAttribute('data-category');
           const catKey = id.replace('child-', '');
-          const select = element.querySelector('.subcategory-dropdown');
+          const select = element.querySelector(".subcategory-dropdown");
           if (select) {
             const subcat = select.value;
             loadSubcatData(category, subcat, 1, catKey);
@@ -314,14 +318,10 @@ function updateWithNewData(newData) {
         <td colspan="6" class="p-0">
           <div id="child-${cat_key}" class="collapse" data-category="${category}">
             <div class="mb-2 mx-2">
-              <select class="form-select subcategory-dropdown" data-category="{{ parent.category }}">
-                {% if category in sub_map and sub_map[category].subcategories %}
-                  {% for subcat in sub_map[category].subcategories.keys() %}
-                  <option value="{{ subcat }}">{{ subcat }}</option>
-                  {% endfor %}
-                {% else %}
-                  <option value="">No subcategories available</option>
-                {% endif %}
+              <select class="form-select subcategory-dropdown" data-category="${category}">
+                {% for subcat in sub_map[category].subcategories %}
+                <option value="{{ subcat }}">{{ subcat }}</option>
+                {% endfor %}
               </select>
             </div>
             <div id="loading-${cat_key}" class="text-center my-2" style="display: none;">
